# Python-CodeWars-Solutions

./: .gitignore
Python_for_AI/AI_Agents/First_AI_Agents/: First_AI_Assistant.py
Python_for_AI/AI_Agents/Using_Lancedb_Docling/: Chat.py  Chunking.py  Embedding.py  Extraction.py  Searching.py
Python_for_AI/Celery/Professional_Task_Queues/: client.py  docker-compose.yml  main.py  pyproject.toml  worker.py
Python_for_AI/FastAPI/: finance.db
Python_for_AI/FastAPI/FastAPI_First_Project/: endpoint.py  main.py  pyproject.toml  request.py  router.py
Python_for_AI/FastAPI/Full_FastAPI_Project/: finance.db  main.py  pyproject.toml
Python_for_AI/FastAPI/Full_FastAPI_Project/app/: dependency.py  enum.py  models.py  schemas.py
Python_for_AI/FastAPI/Full_FastAPI_Project/tests/: conftest.py
Python_for_AI/LangChain/: pyproject.toml
Python_for_AI/LangChain/First_Project/: main.py  pyproject.toml
Python_for_AI/LangChain/langchain.egg-info/: PKG-INFO  SOURCES.txt
Python_for_AI/LangGraph/First_Project/: main.py  pyproject.toml
Python_for_AI/Machine_Learning/Comparison_Sklearn_PyTorch/: main.py
Python_for_AI/PostgreSQL/First_Project/: main.py  pyproject.toml
Python_for_AI/PostgreSQL/High_Performance_RAG/: main.py  pyproject.toml
Python_for_AI/PyTorch/Digit_Recognition/: .gitignore  main.py  pyproject.toml
Python_for_AI/PyTorch/First_Project/: main.py
Python_for_AI/PyTorch/Pneumonia_Classifier/: main.py  pyproject.toml
Python_for_AI_Agents/AI_Agents/Using_Lancedb_Docling/: Embedding.py  Extraction.py
(+21 files in other folders)
